# kiwi_ws

./: .gitignore  README.md
.github/workflows/: ci_push.yml
src/kiwi_control/: CMakeLists.txt  package.xml
src/kiwi_control/cfg/: pid.cfg  pid_tuned.yaml  pidvalues.txt
src/kiwi_control/launch/: kiwi_tune_pid.launch
src/kiwi_control/src/: kiwi_move2pose_node.cpp  kiwi_move2pose_node_working.cpp  kiwi_pid_traj_track_node.cpp
src/kiwi_drive/: CMakeLists.txt  README.md  package.xml
src/kiwi_drive/config/: config.rviz  ekf.yaml  kiwi_control.yaml
src/kiwi_drive/include/kiwi_drive/: kiwi.hpp
src/kiwi_drive/launch/: create_launch.py  gazebo_simulation.launch  kiwi_from_xacro.launch  rviz.launch  rviz_from_xacro.launch  spawn.launch
src/kiwi_drive/meshes/: get_properties.py  get_properties_2.py  imuorigin_scaled.stl  kiwibasev4.stl  kiwibasev4_scaled.stl  omniwheel.stl  omniwheelcastor.stl  omniwheelcastororigin.stl  omniwheelcastororigin_scaled.stl  omniwheelorigin.stl  omniwheelorigin_scaled.stl
src/kiwi_drive/msg/: Velocity.msg
src/kiwi_drive/scripts/: kinematics.py  kiwi_kinematics.py  kiwi_plot.py  kiwirobot.py  main.py  robot.py  test_kiwirobot.py  trajectory_planning.py  trajectory_planning_v2.py  utils.py
src/kiwi_drive/src/: kiwi_controller_node.cpp
src/kiwi_drive/src/kiwi_drive/: kinematics.cpp  kiwi.cpp  odometry.cpp
src/kiwi_drive/src/sensor/: encoder.cpp
src/kiwi_drive/srv/: FrameToFrame.srv  KinematicsForward.srv  KinematicsInverse.srv
src/kiwi_drive/urdf/: kiwi.urdf.xacro  rover.urdf  rover.urdf.xacro
src/kiwi_drive/worlds/: example.world  simple_arena.world
src/kiwi_path/: CMakeLists.txt  package.xml
src/kiwi_path/launch/: kiwi_path_generator.launch  kiwi_path_plot.launch
src/kiwi_path/src/: kiwi_odom_path_node.cpp  kiwi_path_generator_node.cpp
src/kiwi_teleop/: CMakeLists.txt  package.xml
src/kiwi_teleop/src/: kiwi_teleop_node.cpp
src/teleop_keyboard_omni3/: teleop_keyboard_omni3.py
